--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <body>
         <div class="app"></div>
 
-        <script src="js/next-extention.js"></script>
+        <script src="js/nextJs.js"></script>
         <script src="js/script.js"></script>
     </body>
 
